<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewPager">
    </android.support.v4.view.ViewPager>
    <View
        android:layout_width="match_parent"
        android:layout_above="@id/dotLayout"
        android:layout_height="@dimen/dot_height"
        android:alpha=".5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:id="@+id/dotLayout"
        android:layout_alignParentTop="true">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line"
        android:layout_above="@id/textBottom"
        android:layout_margin="@dimen/fab_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSelectRegister"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/btn_margin"
            android:background="@drawable/round_button_register"
            android:text="@string/btn_register"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSelectLogin"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/btn_margin"
            android:background="@drawable/round_button_login"
            android:textColor="@color/colorBlue"
            android:text="@string/btn_login"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/textBottom"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/text_margin"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:text="@string/text_bottom"/>


</RelativeLayout>